css/components/header.css
header {
    display: block;
    width: 100%;
    height: 30px;
    background-color: white;
    position: fixed;
}
header nav {
    display: inline-block;
    float: right;
    height: auto;
}
header nav > a {
    display: inline-block;
    float: left;
    color: black;
    margin: 0 5px;
    padding: 0 25px;
    padding-top: 9px;
    font-size: 15px;
    text-decoration: none;
    text-transform: uppercase;
}

nav > a.navbar__link:hover {
    border-bottom: 2px solid rgb(59, 206, 59);
}

/* RESPONSIVE */
/* tablets */
@media only screen and (min-device-width: 500px) and (max-device-width: 770px) {
    header {
        height: 40px;
    }

    header nav {
        height: 100%;
    }

    header nav > a {
        margin: 0;
        padding: 10px 25px;
        font-size: 16px;
    }
    
    nav > a.navbar__link:hover {
        border-bottom: 2px solid rgb(59, 206, 59);
    }
}

/* RESPONSIVE */
/* phones */
@media only screen and (min-device-width: 300px) and (max-device-width: 500px) {
    header {
        display: block;
        width: 100%;
        height: auto;
    }

    header > nav {
        width: 100%;
        display: inline-block;
        float: none;
        height: 100%;
    }

    header nav > a {
        text-align: center;
        display: inline-block;
        width: 100%;
        float: none;
        margin: 0 0;
        padding-top: 0px;
        padding: 15px 0px;
        font-size: 18px;
    }
    
    nav > a.navbar__link:hover {
        border-bottom: 2px solid rgb(59, 206, 59);
    }
}

